fix gallery width on mobile

--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -1,3 +1,7 @@
+.gallery {
+  width: 100%;
+}
+
 .intro {
   display: flex;
 }
